--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -18,7 +18,7 @@ box-shadow: 11px -10px 24px rgba(0, 0, 0, 0.1);
 .signup-container button {
   width: 100%;
   padding: 12px;
-  background-color: black;
+  background-color: #3399ff;
   color: white;
   border: none;
   border-radius: 6px;
@@ -29,5 +29,5 @@ box-shadow: 11px -10px 24px rgba(0, 0, 0, 0.1);
 }
 
 .signup-container button:hover {
-  background-color: rgb(247, 12, 12);
+  background-color: #0073e6;
 }
