--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,18 +1,25 @@
 
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', sans-serif;
-  height: 100%;
-  background-color: #f5f5f5;
+body {
+  background-color: #ffffff;
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
+
 .home-container {
+  background-image: url('background1.jpg');
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url(background1.jpg);
+ 
   background-size: cover;
   background-position: center;
   color: white;
