--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f5f5f5; 
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
 
 h1 {
   font-size: 3.2em;
