--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -4,14 +4,13 @@
   align-items: center;
   min-height: 100vh;
   padding: 2rem;
-  
-  background-image: url('/Pages/ajout.png'); 
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+
+  background-color: #b3d1ff;
 }
+
 .login-container form {
-  background-color: white;
+  background: rgba(255, 255, 255, 0.9); 
+  backdrop-filter: blur(8px); 
   padding: 2.5rem;
   border-radius: 16px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
