--- a/src/Pages/PageAccueil/Acceuil.css
+++ b/src/Pages/PageAccueil/Acceuil.css
@@ -56,7 +56,7 @@
   position: relative;
 }
 
-.sold-ribbon {
+.sold-noeud {
   position: absolute;
   top: 12px;
   right: -35px;
@@ -117,4 +117,7 @@
   background-color: gray !important;
   cursor: not-allowed;
   opacity: 0.7;
+}
+h3{
+  color: black;
 }
